Fix Gradle 9.0 compatibility and deprecation warnings
- Replace deprecated sourceCompatibility/targetCompatibility with java extension
- Replace deprecated URL(String) constructor with URI.create().toURL()
- Add -Xlint:deprecation flag for better deprecation visibility